--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "temp_app",
+  "name": "no-limit-translate",
   "version": "0.1.0",
-  "private": true,
+  "license": "MIT",
   "scripts": {
     "dev": "next dev --webpack",
     "build": "next build --webpack",
